Fixing text (9th of august)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -427,7 +427,7 @@
   </ng-template>
   <div class="my-progress">
     <li>
-      Feature :
+      Features Added :
       <p>- Add a "Presets: " label to the left of current preset name.</p>
       <p>- Add this icon "▼" next to the preset label.</p>
       <p>- Add this icon "▼" on the right of the first and second selectors.</p>
@@ -437,7 +437,7 @@
       </p>
     </li>
     <li>
-      Bugs/issues :
+      Bugs fixed :
       <p>
         - Fixing : (load a preset, do any modifications, try to load another
         preset, confirm this - then the same preset that was already loaded
