Added an update for today 10 of August

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -473,7 +473,8 @@
   </ng-template>
   <div class="my-progress">
     <li>
-      Features Added :
+      1) Features Added :
+      <h1>9 of August</h1>
       <p>- Add a "Presets: " label to the left of current preset name.</p>
       <p>- Add this icon "▼" next to the preset label.</p>
       <p>- Add this icon "▼" on the right of the first and second selectors.</p>
@@ -481,9 +482,23 @@
         - Working in progress with adding X to clear input both "Between" dates
         , exactly...
       </p>
+      <h1>10 Of August</h1>
+      <p>
+        - Added clear "X" button to the right of both "Between" dates in the
+        same way as you did for text fields.
+      </p>
+      <p>
+        - Added "X" button on the right of "Exactly", "Before" and "After" looks
+        like in the same way as for text fields
+      </p>
+      <p>
+        - Replaced Drag-and-drop with to additional buttons to the right of
+        "(-)" button: arrow up and arrow down ( it is with functionality)
+      </p>
     </li>
     <li>
-      Bugs fixed :
+      2) Bugs fixed :
+      <h1>9 of August</h1>
       <p>
         - Fixing : (load a preset, do any modifications, try to load another
         preset, confirm this - then the same preset that was already loaded
@@ -496,6 +511,13 @@
         message got displayed despite it's filled ). But I need to fix the date
         validation
       </p>
+      <h1>10 of August</h1>
+    </li>
+    <li>
+      3) UI redesigned.
+      <h1>10 of August</h1>
+      <p>- change the form into column when it is on mobile.</p>
+      <p>Make the "▼" a bit near the name</p>
     </li>
   </div>
 </ion-content>
