--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,86 +8,88 @@
         >
       </ion-item>
       <ion-list slot="content" class="list">
-        <div
-          *ngIf="preSelectList.length > 0 else emptyList"
-          class="search-row search-row-select"
-        >
-          <div class="select-search">
-            <span class="span-presets">Presets :</span>
-            <div class="select-item">
-              <ion-select
-                interface="popover"
-                placeholder="Presets"
-                value="Presets"
-                [(ngModel)]="selectedPresetId"
-                (ionChange)="this.onPreselectDDLChange($event)"
-                id="presets-select"
-                [tooltip]="'presets list'"
-                (ionFocus)="onSelectFocus($event)"
-              >
-                <ion-select-option
+        <ion-infinite-scroll>
+          <div
+            *ngIf="preSelectList.length > 0 else emptyList"
+            class="search-row search-row-select"
+          >
+            <div class="select-search">
+              <span class="span-presets">Presets :</span>
+              <div class="select-item">
+                <ion-select
+                  interface="popover"
+                  placeholder="Presets"
+                  value="Presets"
+                  [(ngModel)]="selectedPresetId"
+                  (ionChange)="this.onPreselectDDLChange($event)"
+                  id="presets-select"
+                  [tooltip]="'presets list'"
                   (ionFocus)="onSelectFocus($event)"
-                  *ngFor="let pre of preSelectList; let i2 = index"
-                  [value]="pre?.id"
-                  class="preset-option"
                 >
-                  {{pre?.filterName}}
-                </ion-select-option>
-              </ion-select>
-            </div>
-          </div>
-          <div>
-            <div class="dropdown save-btn1">
-              <ion-button
-                class="btn-primary dropdown-toggle plus-button"
-                type="button"
-                id="dropdown"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                [tooltip]="'menu'"
-              >
-                <ion-icon
-                  slot="icon-only"
-                  src="../../assets/icon/dots.svg"
-                ></ion-icon>
-              </ion-button>
-              <ul class="dropdown-menu" aria-labelledby="dropdown">
-                <li class="dropdown-item" (click)="open(content)">
-                  Save As New Preset
-                </li>
-                <li
-                  class="dropdown-item"
-                  (click)="updateCurrentPreset( 
-                )"
-                >
-                  <button
-                    class="disable-preset-menu"
-                    [disabled]="this.currentPresetName === '' ? true : false"
+                  <ion-select-option
+                    (ionFocus)="onSelectFocus($event)"
+                    *ngFor="let pre of preSelectList; let i2 = index"
+                    [value]="pre?.id"
+                    class="preset-option"
                   >
-                    Update Current Preset
-                  </button>
-                </li>
-                <li
-                  class="dropdown-item"
-                  (click)="deletePreset(
+                    {{pre?.filterName}}
+                  </ion-select-option>
+                </ion-select>
+              </div>
+            </div>
+            <div>
+              <div class="dropdown save-btn1">
+                <ion-button
+                  class="btn-primary dropdown-toggle plus-button"
+                  type="button"
+                  id="dropdown"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  [tooltip]="'menu'"
+                >
+                  <ion-icon
+                    slot="icon-only"
+                    src="../../assets/icon/dots.svg"
+                  ></ion-icon>
+                </ion-button>
+                <ul class="dropdown-menu" aria-labelledby="dropdown">
+                  <li class="dropdown-item" (click)="open(content)">
+                    Save As New Preset
+                  </li>
+                  <li
+                    class="dropdown-item"
+                    (click)="updateCurrentPreset( 
+                )"
+                  >
+                    <button
+                      class="disable-preset-menu"
+                      [disabled]="this.currentPresetName === '' ? true : false"
+                    >
+                      Update Current Preset
+                    </button>
+                  </li>
+                  <li
+                    class="dropdown-item"
+                    (click)="deletePreset(
                   this.selectedPresetId,
                   this.currentPresetName,
                   this.allSearch())"
-                >
-                  <button
-                    class="disable-preset-menu"
-                    [disabled]="this.currentPresetName === '' ? true : false"
                   >
-                    Delete Preset
-                  </button>
-                </li>
-                <li class="dropdown-item" (click)="clearFilter()">
-                  Clear Preset
-                </li>
-              </ul>
+                    <button
+                      class="disable-preset-menu"
+                      [disabled]="this.currentPresetName === '' ? true : false"
+                    >
+                      Delete Preset
+                    </button>
+                  </li>
+                  <li class="dropdown-item" (click)="clearFilter()">
+                    Clear Preset
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
+        </ion-infinite-scroll>
         <ion-grid class="form-wrapper" style="overflow: overlay; height: 100vh">
           <form class="" [formGroup]="searchFilterForm">
             <div formArrayName="search">
@@ -239,10 +241,10 @@
                     >
                     </ion-input>
                     <ng-template #dates>
+                      <!-- placeholder="Start Date" -->
                       <ion-input
                         onkeypress="return false;"
                         onkeydown="return false"
-                        type="none"
                         class="input-box range"
                         formControlName="param3"
                         [value]="this.datePickersInfo[i]?.start?.formatedValue"
@@ -259,13 +261,14 @@
                         class="ion-datetime-start"
                         formControlName="param3"
                         (ionChange)="this.dateChanged( 'start',datetime.value,i, $event)"
-                        [value]="this.datePickersInfo[i].start.formatedValue"
+                        [value]="this.datePickersInfo[i]?.start?.formatedValue"
                         showDefaultButtons="true"
                         (ionCancel)="this.datePickersInfo[i].start.open = false"
                         min="2000-01-01T00:00:00"
                       >
                         <span slot="title">Select a start date</span>
                       </ion-datetime>
+                      <!-- placeholder=" Pick Date" -->
                       <ion-input
                         onkeypress="return false;"
                         onkeydown="return false"
@@ -274,8 +277,8 @@
                         [value]="this.datePickersInfo[i]?.start?.formatedValue"
                         formControlName="param3"
                         [ngClass]="!allSearch().controls[i].get('param3')?.valid && submitted ? 'error' : ''"
-                        *ngIf="allSearch().controls[i].get('param2')?.value !== 'BETWEEN'"
-                        (click)="this.datePickerInputOnClickNotBetween(i, $event)"
+                        *ngIf="allSearch().controls[i]?.get('param2')?.value !== 'BETWEEN'"
+                        (click)="this.datePickerInputOnClickNotBetween(i)"
                       >
                       </ion-input>
                       <ion-datetime
@@ -283,9 +286,9 @@
                         [presentation]="selectMode"
                         *ngIf="this.datePickersInfo[i]?.start?.open"
                         showDefaultButtons="true"
-                        [value]="this.valueInputPicker"
+                        [value]="this.datePickersInfo[i]?.start?.formatedValue"
                         class="datepicker-input"
-                        (ionCancel)="this.datePickersInfo[i]?.start.open = false"
+                        (ionCancel)="this.datePickersInfo[i].start.open = false"
                         (ionChange)="dateChangedInputPicker(i,datetime.value , $event)"
                       >
                         <span slot="title"> Pick date </span>
@@ -317,6 +320,7 @@
                      -->
                       <span slot="title">Select an end date</span>
                     </ion-datetime>
+                    <!-- placeholder="End Date" -->
                     <ion-input
                       onkeypress="return false;"
                       onkeydown="return false"
