Adding the progress text 12 of August

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -538,12 +538,25 @@
         value (Fixed)
       </p>
       <p>Fixing the bugs when I added multiple row</p>
+      <h1>12 of August</h1>
+      <p>fixed the opening automatically when the use click the date</p>
     </li>
     <li>
       3) UI redesigned.
       <h1>10 of August</h1>
       <p>- change the form into column when it is on mobile.</p>
       <p>Make the "▼" a bit near the name</p>
+      <h1>12 of August</h1>
+      <p>Add scroll when user add more row</p>
+      <p>
+        Fixing the height so to let the user to see the cancel and ok when they
+        want to confirm the date
+      </p>
+    </li>
+    <li>
+      4) Working on progress
+      <h1>12 of August</h1>
+      <p>working with the discard</p>
     </li>
   </div>
 </ion-content>
