--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -192,15 +192,14 @@ select {
 }
 
 .search-row-select {
-  width: 96%;
+  // width: 96%;
   margin: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  // gap: 1rem;
-  // margin:0;
-  // margin-right: 3rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 
   .select-class {
     width: 100%;
